# parlamentni-kontrola

./: .env.example  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  docker-compose.yaml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init_schema.py
backend/app/: celery_app.py  config.py  logging_conf.py  main.py  middlewares.py  security.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  hlasovani.py  poslanci.py  router.py  statistiky.py  tisky.py
backend/app/etl/: downloader.py  importer.py  metrics.py  name_normalizer.py  proposer_mapper.py  scheduler.py  unl_parser.py
backend/app/models/: base.py  hlasovani.py  mapping.py  materialized.py  poslanci.py  tematika.py  tisky.py
backend/app/schemas/: common.py  hlasovani.py  poslanci.py  stats.py  tisky.py
backend/app/seed/: init.py  load_demo.py
backend/app/services/: aggregation.py  caching.py  overrides.py  pagination.py  search.py
backend/tests/: test_aggregations.py  test_api_poslanci.py  test_proposer_mapping.py  test_unl_parser.py
cypress/e2e/: dashboard.cy.ts  profile.cy.ts
cypress/fixtures/: example.json
cypress/support/: commands.ts  e2e.ts
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: PoslanecProfileCard.tsx
frontend/src/hooks/: useQueryParams.ts
frontend/src/routes/: Compare.tsx  Dashboard.tsx  Hlasovani.tsx  Tisky.tsx  (+4 more)
infra/: README.md
reverse-proxy/: nginx.conf
(+14 files in other folders)
