[tool.poetry]
name = "parlamentni-kontrola-backend"
version = "0.1.0"
description = "FastAPI backend for ParlamentniKontrola.cz"
authors = ["ParlamentníKontrola Team"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
gunicorn = "^22.0.0"
psycopg2-binary = "^2.9.9"
SQLAlchemy = "^2.0.35"
alembic = "^1.13.2"
pydantic = "^2.9.2"
pydantic-settings = "^2.4.0"
python-multipart = "^0.0.9"
redis = "^5.0.8"
celery = "^5.4.0"
requests = "^2.32.3"
chardet = "^5.2.0"
python-slugify = "^8.0.4"
rapidfuzz = "^3.9.7"
orjson = "^3.10.7"
structlog = "^24.1.0"
prometheus-client = "^0.20.0"
limits = "^3.13.0"
slowapi = "^0.1.9"
ujson = "^5.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
httpx = "^0.27.2"
ruff = "^0.6.5"
mypy = "^1.11.2"
types-requests = "^2.32.0.20240914"

[tool.ruff]
line-length = 100
select = ["E","F","I","B","UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
